update tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,7 +31,7 @@ setw mode-keys vi
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
-################## Bindings ##################
+################## Plugins ##################
 
 # Plugin manager
 set -g @plugin 'tmux-plugins/tpm'
