update tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,7 +31,7 @@ setw mode-keys vi
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
-################## Plugins ##################
+################## Bindings ##################
 
 # Plugin manager
 set -g @plugin 'tmux-plugins/tpm'
@@ -41,3 +41,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 # Initialize TMUX plugin manager 
 # Keep this line at the very bottom of tmux.conf
 run -b '~/.tmux/plugins/tpm/tpm'
+
+unbind >
+unbind <
+
