--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,6 +38,13 @@ set -g @plugin 'tmux-plugins/tpm'
 # Seamless navigation b/w vim splits & tmux panes
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+# Saving & restoring tmux sessions
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Automatically restore last session
+set -g @continuum-restore 'on'
+
 # Initialize TMUX plugin manager 
 # Keep this line at the very bottom of tmux.conf
 run -b '~/.tmux/plugins/tpm/tpm'
@@ -45,3 +52,6 @@ run -b '~/.tmux/plugins/tpm/tpm'
 unbind >
 unbind <
 
+# Save & restore session manually
+set -g @resurrect-save 'S'
+set -g @resurrect-restore 'R'
